[tool.poetry]
name = "adscb"
version = "0.1.0"
description = ""
authors = ["AiWaldoh <kevin@gptcoder.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
lancedb = "^0.6.11"
cohere = "^5.3.3"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
